checkAllNotNull test case fixed